--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,5 @@
 .app {
   display: flex;
-  background-color: #f5f0f077;
   height: 100vh;
   overflow: hidden;
 }
@@ -8,32 +7,51 @@ html,
 body {
   margin: 0;
   height: 100%;
+  background-color: #f5f0f077;
 }
-.scrollable-container {
-  flex: 1;
-  overflow-y: scroll;
-  padding: 20px;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none;
+
+.photo-grid {
+  display: grid;
+  overflow-x: hidden;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-columns: minmax(3fr, 3fr);
+  grid-gap: 30px;
 }
+
+.customer-image {
+  object-fit: fill;
+  width: 100%;
+  height: 100%;
+}
+
+.customer-image-container {
+  border-radius: 10px;
+  overflow: hidden;
+  aspect-ratio: 1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
 
-.scrollable-content {
-  width: 100%;
-  height: 100%;
-  background-color: #f5f5f5;
+.left-container {
+  flex: 1;
+  justify-content: space-between;
+  scrollbar-width: 23px;
 }
 
-.customer-list {
-  flex: 1;
+.right-container {
+  flex: 2;
+  margin-left: 20px;
+  padding: 10px;
+  scrollbar-width: none;
 }
 
 .customer-card {
-  background-color: #f5f5f5;
   padding: 10px;
-  margin-bottom: 1px;
+  margin: 10px;
+  border-radius: 8px;
 }
 
 .customer-card h2 {
@@ -50,6 +68,7 @@ body {
 .customer-details-container {
   flex: 2;
   margin-left: 20px;
+  padding: 10px;
 }
 
 .customer-details {
