--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,85 +1,34 @@
-.app {
-  display: flex;
-  height: 100vh;
-  overflow: hidden;
-}
 html,
 body {
   margin: 0;
   height: 100%;
-  background-color: #f5f0f077;
+  background-color: #ffffff;
 }
 
-.photo-grid {
-  display: grid;
-  overflow-x: hidden;
-  grid-template-columns: repeat(3, 1fr);
-  grid-auto-columns: minmax(3fr, 3fr);
-  grid-gap: 30px;
-}
-
-.customer-image {
-  object-fit: fill;
-  width: 100%;
-  height: 100%;
-}
-
-.customer-image-container {
-  border-radius: 10px;
+.app {
+  display: flex;
+  height: 100vh;
   overflow: hidden;
-  aspect-ratio: 1;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 4px 8px rgba(0, 0, 0, 0.2);
+  flex-direction: column;
+}
+.flex-row {
+  display: flex;
+  flex: 1;
+  overflow: hidden;
 }
 
-::-webkit-scrollbar {
-  display: none;
+.title {
+  align-self: center;
 }
 
 .left-container {
   flex: 1;
+  flex-direction: column;
   justify-content: space-between;
-  scrollbar-width: 23px;
 }
 
 .right-container {
   flex: 2;
   margin-left: 20px;
   padding: 10px;
-  scrollbar-width: none;
-}
-
-.customer-card {
-  padding: 10px;
-  margin: 10px;
-  border-radius: 8px;
-}
-
-.customer-card h2 {
-  margin: 0;
-  font-size: 20px;
-}
-
-.customer-card p {
-  margin: 0;
-  font-size: 16px;
-  color: #888;
-}
-
-.customer-details-container {
-  flex: 2;
-  margin-left: 20px;
-  padding: 10px;
-}
-
-.customer-details {
-  background-color: #f5f5f5;
-  padding: 20px;
-}
-
-.customer-details h1 {
-  margin-top: 0;
-}
-
-.customer-details p {
-  margin-bottom: 10px;
 }
